--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<script src="{% static 'js/scripts.js' %}"></script>
 {% extends 'base.html' %}
 {% block content %}
   <h2>Register</h2>
