--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -14,3 +14,8 @@
 {% endif %}
 <a href="{% url 'post-list' %}">Back to all posts</a>
 {% endblock %}
+<p>Tags:
+    {% for tag in post.tags.all %}
+        <a href="{% url 'posts_by_tag' tag.name %}">{{ tag.name }}</a>
+    {% endfor %}
+</p>
